gtkmm4_dep = dependency('gtkmm-4.0')
epoxy_dep = dependency('epoxy')

yuvtool_sources = [
    # 'color_space_frame.cpp',
    # 'color_space_frame.h',
    # 'drawer_gl.cpp',
    # 'drawer_gl.h',
    # 'format_chooser_widget.cpp',
    # 'format_chooser_widget.h',
    'main.cpp',
    # 'resolution_and_format_dialog.cpp',
    # 'resolution_and_format_dialog.h',
    # 'resolution_chooser_widget.cpp',
    # 'resolution_chooser_widget.h',
    # 'scroll_adapter.cpp',
    # 'scroll_adapter.h',
    # 'viewer_frame.cpp',
    # 'viewer_frame.h',
    # 'yuv_tool_application.cpp',
    # 'yuv_tool_application.h'
]
executable(
    'yuvtool',
    yuvtool_sources,
    dependencies : [yuv_dep, gtkmm4_dep, epoxy_dep])
